# WEB_HW_13_D

./: .gitignore  README.md  pyproject.toml
web_hw_10/: manage.py
web_hw_10/quote/: forms.py  models.py  urls.py  views.py
web_hw_10/quote/migrations/: 0001_initial.py
web_hw_10/quote/templates/quote/: author.html  author_detail.html  base.html  detail.html  index.html  quote.html
web_hw_10/users/: forms.py  models.py  urls.py  views.py
web_hw_10/users/migrations/: 0001_initial.py
web_hw_10/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  sign_up.html
web_hw_10/web_hw_10/: asgi.py  settings.py  urls.py  wsgi.py
